bk_ida/gccida/c2/declare_weak
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/declare_weak/src/varasm.c:5552:25: error: use of undeclared identifier 'off_71EFD0'
error_with_decl( decl, &off_71EFD0[4]); 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/declare_weak/src/obj/varasm.o] Error 1
